--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Anton Pogrebnjak",
   "license": "ISC",
   "dependencies": {
+    "csv": "^6.3.8",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
