--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "csv": "^6.3.8",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "html-to-image": "^1.11.11"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
