--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "html-to-image": "^1.11.11"
+    "html-to-image": "^1.11.11",
+    "node-html-to-image": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
