--- a/.env copy
+++ b/.env copy
@@ -1,4 +1,7 @@
 PORT=8080
-TITLE=Wahl-U-Mat
+TITLE="Frag Wahltraut!"
+SUBTITLE="Infotool zur Uni-Wahl 2024"
 THESES_FILE=data/thesen.csv
 PARTIES_FILE=data/listen.csv
+
+SERVER_URL="https://wahl.stuve-uni-kn.de"
