--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   "author": "Anton Pogrebnjak",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "csv": "^6.3.8",
+    "deep-email-validator": "^0.1.21",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "node-html-to-image": "^4.0.0"
+    "express-session": "^1.18.0",
+    "node-html-to-image": "^4.0.0",
+    "pg": "^8.11.5",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
